add logic check inventory